Added mochawesome and other node packages for html reporting

--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "Cypress Automation by Testersdock",
   "main": "index.js",
   "scripts": {
-    "test": "cypress open"
+    "test": "cypress open",
+    "delete:reportFolder": "rm -rf mochawesome-report/",
+    "test:cli": "npm run delete:reportFolder && cypress run",
+    "merge:reports": "mochawesome-merge mochawesome-report/*.json > cypress-combined-report.json",
+    "create:html:report": "npm run merge:reports && marge --reportDir TestReport cypress-combined-report.json"
   },
   "author": "Alapan",
   "license": "ISC",
   "devDependencies": {
     "cypress": "^5.4.0",
     "cypress-downloadfile": "^1.2.0",
-    "cypress-file-upload": "^4.1.1"
+    "cypress-file-upload": "^4.1.1",
+    "mocha": "^8.2.0",
+    "mochawesome": "^6.1.1",
+    "mochawesome-merge": "^4.2.0",
+    "mochawesome-report-generator": "^5.1.0"
   },
   "dependencies": {}
 }
