Updated gitignore and upgraded cypress version to 6.4.0

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ TestReport/
 mochawesome-report/
 cypress-combined-report.json
 cypress/integration/dummy.js
+cypress/fixtures/url.json
+cypress/fixtures/data.txt
