cypress cucumber integration

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^6.5.0",
+    "cypress-cucumber-preprocessor": "^4.0.1",
     "cypress-downloadfile": "^1.2.0",
     "cypress-file-upload": "^4.1.1",
     "cypress-select-tests": "^1.5.8",
@@ -22,5 +23,7 @@
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^5.1.0"
   },
-  "dependencies": {}
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
+    }
 }
