cypress recursion test and blog

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cypress-downloadfile": "^1.2.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-real-events": "^1.5.1",
+    "cypress-recurse": "^1.8.1",
     "cypress-select-tests": "^1.7.1",
     "mocha": "^8.3.2",
     "mochawesome": "^6.2.2",
