--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^1.8.0",
-    "cypress": "^9.7.0",
-    "cypress-cucumber-preprocessor": "^4.2.0",
+    "@badeball/cypress-cucumber-preprocessor": "^11.0.0",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
+    "cypress": "^10.1.0",
     "cypress-downloadfile": "^1.2.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-grep": "^2.13.1",
@@ -29,6 +31,6 @@
     "mysql": "^2.18.1"
   },
   "cypress-cucumber-preprocessor": {
-    "nonGlobalStepDefinitions": true
+    "stepDefinitions": "cypress/e2e/cucumber-test/**/*.{js,ts}"
   }
 }
