--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@4tw/cypress-drag-drop": "^1.8.0",
     "@badeball/cypress-cucumber-preprocessor": "^11.0.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
+    "@deploysentinel/cypress-recorder": "^0.1.0",
     "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "cypress": "^10.3.1",
     "cypress-downloadfile": "^1.2.0",
